--- a/package.json
+++ b/package.json
@@ -12,8 +12,11 @@
     "@emotion/styled": "^11.6.0",
     "@headlessui/react": "^1.4.3",
     "@heroicons/react": "^1.0.5",
+    "@prisma/client": "^3.8.1",
     "@stripe/react-stripe-js": "^1.7.0",
     "@stripe/stripe-js": "^1.22.0",
+    "@tailwindcss/aspect-ratio": "^0.4.0",
+    "faker": "^5.5.3",
     "framer-motion": "^5.6.0",
     "next": "12.0.8",
     "react": "17.0.2",
@@ -25,6 +28,7 @@
     "eslint": "8.7.0",
     "eslint-config-next": "12.0.8",
     "postcss": "^8.4.5",
+    "prisma": "^3.8.1",
     "tailwindcss": "^3.0.15"
   }
 }
